refactored get_all_categories added swagger doc to the enpoint advancing one at a time
